Driver hang when editing UVs in Blender
When editing UVs in Blender, I have encountered two driver hangs so far. (see error.bz2) This hanged the entire compositor (KDE), requiring a full restart of X11. I will attempt to get the debug info from dmesg, but in the meantime this seems to be the relevant part from the normal dmesg output:
[ 3233.412428] Asynchronous wait on fence 0000:00:02.0:kwin_x11[647]:d0e8 timed out (hint:intel_atomic_commit_ready [i915])
[ 3235.146734] i915 0000:00:02.0: [drm] Resetting rcs0 for preemption time out
[ 3235.146746] i915 0000:00:02.0: [drm] blender[6917] context reset due to GPU hang
[ 3235.159960] i915 0000:00:02.0: [drm] GPU HANG: ecode 9:1:87f99eb9, in blender [6917]
[ 3235.159960] GPU hangs can indicate a bug anywhere in the entire gfx stack, including userspace.
My system is a Dell XPS 15 9570 with Intel UHD 630. I'm running Arch Linux x86_64 with kernel version 5.9.9-arch1-1. The hang happened with the builtin display.